--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,55 +1,60 @@
 ---
-layout: index-layout
-subject: My Email Templates
+layout: thebaitshopgoldcoast
+subject: Great Deals Today
 ---
 
-<spacer size="16"></spacer>
-
 <container>
-
-  <spacer size="24"></spacer>
-  
-  <row>
-    <columns small="12">
-
-    <p class="lead">Hi there!</p>
-    <p style="color: #484848; line-height: 1.5;">Thanks for downloading <a href="http://foundation.zurb.com/emails/docs/">Foundation for Emails!</a> Your days of coding up painful HTML emails are officially over. You’ll soon be cranking out some slick, responsive emails in no time! To help get you up and running, we've put together 11 templates for the most common email use cases including newsletters, transactional emails, and marketing blasts. Feel free to customize them to your hearts content.</p>
-
-    <spacer size="16"></spacer>
-
-    <center>
-      <menu class="vertical">
-        <item href="{{root}}basic.html" target="_blank">Basic Template</item>
-        <item href="{{root}}drip.html" target="_blank">Drip Template</item>
-        <item href="{{root}}hero.html" target="_blank">Hero Template</item>
-        <item href="{{root}}marketing.html" target="_blank">Marketing Template</item>
-        <item href="{{root}}newsletter.html" target="_blank">Newsletter Template</item>
-        <item href="{{root}}newsletter-2.html" target="_blank">Newsletter 2 Template</item>
-        <item href="{{root}}order.html" target="_blank">Order Template</item>
-        <item href="{{root}}password.html" target="_blank">Password Template</item>
-        <item href="{{root}}sidebar.html" target="_blank">Sidebar Template</item>
-        <item href="{{root}}sidebar-hero.html" target="_blank">Sidebar Hero Template</item>
-        <item href="{{root}}welcome.html" target="_blank">Welcome Template</item>
-      </menu>
-    </center>
-
-    <spacer size="16"></spacer>
-
-    <p>Happy Coding,</p>
-    <p>The Foundation Team</p>
-
-
-    <spacer size="16"></spacer>
-
+  <row class="dealOfDay">
+    <columns>
+      <h2>Deal of the Day</h2>
+      <img src="{{baitEmail.dealOfTheDay.image}}">
+      <p>
+        {{baitEmail.dealOfTheDay.location}}: {{baitEmail.dealOfTheDay.description}}
+      </p>
+      <span class="saveAmount">{{baitEmail.dealOfTheDay.saveAmount}}</span>
+      <span class="tinyInfo">{{baitEmail.dealOfTheDay.tinyInfo}}</span>
+      <span class="price">${{baitEmail.dealOfTheDay.price}}+</span>
+      <center>
+        <a href="{{baitEmail.dealOfTheDay.link}}" class="button">See Deal</a>
+      </center>
     </columns>
   </row>
 </container>
 
-<spacer size="16"></spacer>
+<container>
+    <row class="contentArea">
+        <columns class="firstOffer">
+          {{#each baitEmail.offers}}
+          <row class="offer">
+            <columns>
+              <img src="{{this.image}}">
+              <p>{{this.location}}: {{this.description}}</p>
+              <span class="saveAmount">{{this.saveAmount}}</span>
+              <span class="tinyInfo">{{this.tinyInfo}}</span>
+              <span class="price">${{this.price}}+</span>
+                <a href="{{this.link}}" class="button">See Deal</a>
+            </columns>
+          </row>
+          {{/each}}
+      </columns>
+        </row>
+</container>
 
-<center>
-  <small>Keep on keepin' on. &lt;3 <a style="color: #cacaca; text-decoration: underline;" href="http://zurb.com/">ZURB</a> </small>
-</center>
-
-<spacer size="16"></spacer>
-
+<container>
+    <row class="contentArea">
+        <columns>
+          <row class="offer lastOffer">
+            <columns>
+              <row>
+                <columns>
+                    <img src="{{root}}/assets/img/kayak_files/airplane_dark.png" class="groupIcons">
+                </columns>
+              </row>
+              <h4>Still looking? There's more</h4>
+              <p>Search hundreads of deals to suit your budget on flights, packages, cruises and much more.</p>
+                <a href="#" class="button">See Deal</a>
+            </columns>
+          </row>
+      </columns>
+        </row>
+</container>
