--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -6,14 +6,14 @@ subject: Great Deals Today
 <container>
   <row class="dealOfDay">
     <columns>
-      <h2>Deal of the Day</h2>
+      <h2>Deal of the Week</h2>
       <img src="{{baitEmail.dealOfTheDay.image}}">
       <p>
-        {{baitEmail.dealOfTheDay.location}}: {{baitEmail.dealOfTheDay.description}}
+        {{baitEmail.dealOfTheDay.bait}}: {{baitEmail.dealOfTheDay.description}}
       </p>
       <span class="saveAmount">{{baitEmail.dealOfTheDay.saveAmount}}</span>
       <span class="tinyInfo">{{baitEmail.dealOfTheDay.tinyInfo}}</span>
-      <span class="price">${{baitEmail.dealOfTheDay.price}}+</span>
+      <span class="price">${{baitEmail.dealOfTheDay.price}}</span>
       <center>
         <a href="{{baitEmail.dealOfTheDay.link}}" class="button">See Deal</a>
       </center>
@@ -28,10 +28,10 @@ subject: Great Deals Today
           <row class="offer">
             <columns>
               <img src="{{this.image}}">
-              <p>{{this.location}}: {{this.description}}</p>
+              <p>{{this.bait}}: {{this.description}}</p>
               <span class="saveAmount">{{this.saveAmount}}</span>
               <span class="tinyInfo">{{this.tinyInfo}}</span>
-              <span class="price">${{this.price}}+</span>
+              <span class="price">${{this.price}}</span>
                 <a href="{{this.link}}" class="button">See Deal</a>
             </columns>
           </row>
