Changes / Fixes to Content & Footer

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -47,12 +47,12 @@ subject: Great Deals Today
             <columns>
               <row>
                 <columns>
-                    <img src="{{root}}/assets/img/kayak_files/airplane_dark.png" class="groupIcons">
+                    <img src="{{root}}/assets/img/baitshop_files/lookingformore.jpg" class="groupIcons">
                 </columns>
               </row>
               <h4>Still looking? There's more</h4>
-              <p>Search hundreads of deals to suit your budget on flights, packages, cruises and much more.</p>
-                <a href="#" class="button">See Deal</a>
+              <p>Search hundreads of deals to suit your fishing needs on bait, rods, reels, tackle & much more.</p>
+                <a href="thebaitshopgoldcoast.com" class="button">See Deal</a>
             </columns>
           </row>
       </columns>
